hphp/hack/test/typecheck/reading_from_append_4.php.exp
File "reading_from_append_4.php", line 5, characters 6-7:
Cannot use [] for reading (NastCheck[3047])
